# pastebin-worker

./: .env  .gitignore  Cargo.toml  README.md  editor.html  flake.nix  highlight.html  package-lock.json  package.json  pastebin.mjs  search.html  term.css  term.html  term.js  uploader.html  wrangler.toml
src/: lib.rs
