[package]
name = "pastebin-worker-rust"
version = "0.1.0"
edition = "2021"
description = "a pastebin worker for cloudflare workers written in rust"
license = "Apache-2.0"
repository = "https://github.com/codebam/pastebin.seanbehan.ca"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
console_error_panic_hook = "0.1.7"
formdata = "0.13.0"
urlencoding = "2.1.2"
worker = "0.0.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
