[package]
name = "pastebin-worker-rust"
version = "0.1.0"
edition = "2021"
description = "a pastebin worker for cloudflare workers written in rust"
license = "Apache-2.0"
repository = "https://github.com/codebam/pastebin-worker"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
chacha20poly1305 = "0.10.1"
console_error_panic_hook = "0.1.7"
flate2 = "1.0.27"
formdata = "0.13.0"
generic-array = { version = "0.14.7", features = [ "serde" ] }
getrandom = { version = "0.2.10", features = [ "js" ] }
lz4_flex = "0.11.1"
mime_guess = "2.0.4"
rand = "0.8.5"
rand_core = "0.6.4"
serde = "1.0.181"
serde_json = "1.0.104"
urlencoding = "2.1.2"
worker = "0.0.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
