[package]
name = "pastebin-worker-rust"
version = "0.1.0"
edition = "2021"
description = "a pastebin worker for cloudflare workers written in rust"
license = "Apache-2.0"
repository = "https://github.com/codebam/pastebin-worker"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.11.0-pre.2"
console_error_panic_hook = "0.1.7"
flate2 = "1.0.35"
formdata = "0.13.0"
hybrid-array = { version = "0.2.3", features = [ "serde" ] }
getrandom = { version = "0.2.15", features = [ "js" ] }
lz4_flex = "0.11.3"
mime_guess = "2.0.5"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.135"
urlencoding = "2.1.3"
worker = "0.5.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
